<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textUsernameLayout"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/textPasswordInput"
    app:layout_constraintVertical_chainStyle="packed"
    android:hint="@string/username"
    >
 <com.google.android.material.textfield.TextInputEditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/loginInput"/>
</com.google.android.material.textfield.TextInputLayout>

 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/textPasswordInput"
     android:hint="@string/password"
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
     android:layout_marginTop="16dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/textUsernameLayout"
     app:layout_constraintBottom_toTopOf="@id/loginButton"

     >
  <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
   android:id="@+id/textPassword"/>

 </com.google.android.material.textfield.TextInputLayout>
 <com.google.android.material.button.MaterialButton
     android:id="@+id/loginButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/login"
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
     android:layout_marginTop="16dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/textPasswordInput"
     app:layout_constraintBottom_toBottomOf="parent"
  />

</androidx.constraintlayout.widget.ConstraintLayout>